Ping on the minimap added

--- a/maps/proto-summer/index.html
+++ b/maps/proto-summer/index.html
@@ -29,7 +29,7 @@
 
 
 <body>
-  <div id="game">
+  <!-- <div id="game">
     <nav></nav>
     <section data-render-block="map-matrix"></section>
     
@@ -62,7 +62,7 @@
       <!-- <panel data-render-block="info">info</panel>
       <panel data-render-block="actions">actions</panel> -->
     </ui>
-  </div>
+  </div> -->
 
 </body>
 
