Remove slot not used elements

--- a/index.html
+++ b/index.html
@@ -73,12 +73,7 @@
 
           </span>
           <span slot="typeDescription">Basic</span>
-          <span slot="minimapTracing">
-            <span>1</span>
-            <span>2</span>
-            <span>3</span>
-            <span>4</span>
-          </span>
+          <span slot="minimapTracing"></span>
         </minimap-ui>
 
       </panel-ui>
