Pages content rework.

--- a/game/game.html
+++ b/game/game.html
@@ -2,27 +2,27 @@
 <html>
 
 <head>
-  <title>Proto Summer - Map</title>
+  <title>Proto Summer - Map -- New</title>
   <meta charset="UTF-8" />
 
   <!-- WebComps -->
-  <script type="module" src="../../src/components/test_proto.js"></script>
-  <script type="module" src="../../src/components/general/panel.js"></script>
-  <script type="module" src="../../src/components/general/controls.js"></script>
-  <script type="module" src="../../src/components/general/buttonsCollection.js"></script>
+  <script type="module" src="./../src/components/test_proto.js"></script>
+  <script type="module" src="./../src/components/general/panel.js"></script>
+  <script type="module" src="./../src/components/general/controls.js"></script>
+  <script type="module" src="./../src/components/general/buttonsCollection.js"></script>
 
-  <script type="module" src="../../src/components/ui/pingMap.js"></script>
+  <script type="module" src="./../src/components/ui/pingMap.js"></script>
 
-  <script type="module" src="../../src/components/map/minimap.js"></script>
+  <script type="module" src="./../src/components/map/minimap.js"></script>
 
-  <link rel="stylesheet" href="../../src/styles.css">
-  <link rel="stylesheet" href="../../src/terrain.css">
-  <link rel="stylesheet" href="../../src/tiles.css">
-  <link rel="stylesheet" href="../../src/sub_tiles.css">
-  <script type="module" src="../../src/subTile.js"></script>
-  <script type="module" src="../../src/tile.js"></script>
-  <script type="module" src="../../src/map.js"></script>
-  <script type="module" src="../../src/index.js"></script>
+  <link rel="stylesheet" href="./../src/styles.css">
+  <link rel="stylesheet" href="./../src/terrain.css">
+  <link rel="stylesheet" href="./../src/tiles.css">
+  <link rel="stylesheet" href="./../src/sub_tiles.css">
+  <script type="module" src="./../src/subTile.js"></script>
+  <script type="module" src="./../src/tile.js"></script>
+  <script type="module" src="./../src/map.js"></script>
+  <script type="module" src="./../src/index.js"></script>
 
 
 
