--- a/index-old.html
+++ b/index-old.html
@@ -7,7 +7,7 @@
 
   <!-- WebComps -->
   <!-- <script src="../"></script> -->
-  <link rel="stylesheet" href="../../src/styles.css">
+  <link rel="stylesheet" href="./src/styles.css">
 
 </head>
 
