--- a/game/index.html
+++ b/game/index.html
@@ -1,36 +1,33 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Proto Summer - Map -- New</title>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/x-icon" href="./favicon---tank-4.svg">
 
-<head>
-    <title>Proto Summer - Map -- New</title>
-    <meta charset="UTF-8" />
+        <script type="module" src="./core/global.js"></script>
+        
+        <!-- WebComps -->
+        <script type="module" src="./render/components/general/panel.js"></script>
+        <script type="module" src="./render/components/general/controls.js"></script>
+        <script type="module" src="./render/components/general/buttonsCollection.js"></script>
 
-    <!-- WebComps -->
-    <!-- <script type="module" src="./../src/components/test_proto.js"></script> -->
+        <script type="module" src="./render/components/ui/pingMap.js"></script>
 
-    <script type="module" src="./core/global.js"></script>
+        <script type="module" src="./render/components/map/minimap.js"></script>
 
-    <script type="module" src="./src/components/general/panel.js"></script>
-    <script type="module" src="./src/components/general/controls.js"></script>
-    <script type="module" src="./src/components/general/buttonsCollection.js"></script>
+        <link rel="stylesheet" href="./src/styles.css">
+        <link rel="stylesheet" href="./src/terrain.css">
+        <link rel="stylesheet" href="./src/tiles.css">
+        <link rel="stylesheet" href="./src/sub_tiles.css">
+        <script type="module" src="./src/subTile.js"></script>
+        <script type="module" src="./src/tile.js"></script>
+        <script type="module" src="./src/map.js"></script>
+        <script type="module" src="./src/index.js"></script>
+    </head>
 
-    <script type="module" src="./src/components/ui/pingMap.js"></script>
+    <body>
+        <div id="game"></div>
+    </body>
 
-    <script type="module" src="./src/components/map/minimap.js"></script>
-
-    <link rel="stylesheet" href="./src/styles.css">
-    <link rel="stylesheet" href="./src/terrain.css">
-    <link rel="stylesheet" href="./src/tiles.css">
-    <link rel="stylesheet" href="./src/sub_tiles.css">
-    <script type="module" src="./src/subTile.js"></script>
-    <script type="module" src="./src/tile.js"></script>
-    <script type="module" src="./src/map.js"></script>
-    <script type="module" src="./src/index.js"></script>
-
-
-
-</head>
-
-<body>
-    <div id="game"></div>
-</body>
+</html>
